tests/NormalTests/paczka1/fuzzy1/57043434.err
Error in line 3: eYT A922 60,8
Error in line 17: NyHeUtv S921 89,2
